Fix file input button alignment

--- a/app/styles/components/forms/_file-input-button.scss
+++ b/app/styles/components/forms/_file-input-button.scss
@@ -1,7 +1,4 @@
-.file-input-button {
-  position: relative;
-  top: 5px;
-}
+.file-input-button {}
 
 .file-input-button__input {
   display: none;
