--- a/app/styles/components/forms/_tabular-form-controls.scss
+++ b/app/styles/components/forms/_tabular-form-controls.scss
@@ -31,6 +31,10 @@
   border-bottom: 1px solid transparent;
 }
 
+.tabular-form-controls__cell--button {
+  vertical-align: middle;
+}
+
 .tabular-form-controls__cell--grow {
   width: 100%;
 }
